Cabal-Version:       3.0
Name:                muesliswappools-core
Version:             1.0
Copyright:           © 2021 Minswap Labs
License:             GPL-3.0-only
License-files:       LICENSE

common c
  default-language: Haskell2010
  default-extensions:
    ExplicitForAll
    ScopedTypeVariables
    DeriveGeneric
    StandaloneDeriving
    DeriveLift
    GeneralizedNewtypeDeriving
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    LambdaCase
    MultiParamTypeClasses
    TypeOperators
    FlexibleInstances
    NamedFieldPuns
    TypeFamilies
    FlexibleContexts
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DataKinds

library
  import: c
  hs-source-dirs: src
  exposed-modules:
    MuesliSwapPools.Types.Coin,
    MuesliSwapPools.ConstantProductPool.OnChain,
    MuesliSwapPools.ConstantProductPool.Types,
    MuesliSwapPools.ConstantProductPool.Utils,
    MuesliSwapPools.ConstantProductFactory.OnChain,
    MuesliSwapPools.ConstantProductFactory.Types,
    MuesliSwapPools.ConstantProductLiquidity.OnChain,
    MuesliSwapPools.ConstantProductPoolNFT.OnChain,
    MuesliSwapPools.ConstantProductPoolNFT.Utils,
    MuesliSwapPools.BatchOrder.OnChain,
    MuesliSwapPools.BatchOrder.Types,
    MuesliSwapPools.Utils.OnChainUtils,
    MuesliSwapPools.Spooky.Typed,
    MuesliSwapPools.Spooky.Untyped,
    MuesliSwapPools.Spooky.TypedSpookyContexts,
    MuesliSwapPools.Spooky.UntypedSpookyContexts,
    MuesliSwapPools.Plutarch.Utils,
    MuesliSwapPools.Plutarch.Utils.Cont,
    MuesliSwapPools.Plutarch.Ledger
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , bytestring
    , cardano-api
    , cardano-ledger-alonzo
    , containers
    , directory >= 1.3.6.0
    , freer-simple
    , hex-text
    , lens -any
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , pretty-simple
    , prettyprinter
    , regex-tdfa ^>= 1.3.1.0
    , req ^>= 3.9.0
    , serialise
    , plutarch
    , template-haskell >= 2.16.0.0
    , text
    , uuid
    , plutonomy
    , generics-sop

executable muesliswappools
  import: c
  hs-source-dirs: src/MuesliSwapPools
  main-is:        MuesliSwapPools.hs
  ghc-options:    -threaded -rtsopts "-with-rtsopts=-T"
  build-depends:
    , aeson
    , base ^>= 4.14.1.0
    , bytestring
    , cardano-api
    , cardano-api
    , cardano-ledger-alonzo
    , directory
    , directory >= 1.3.6.0
    , ghc-prim
    , muesliswappools-core
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , hex-text
    , plutus-tx-plugin
    , pretty-simple
    , serialise
    , template-haskell >= 2.16.0.0
    , text